fixing the timeline to work on different viewports and so it doesn't get cut off on the top

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1785,6 +1785,36 @@ a:focus {
   z-index: 1;
 }
 
+/* line 2, ../sass/components/_media-timeline.scss */
+.padding-for-timeline {
+  padding-top: 20px;
+  background-color: #fff;
+}
+
+/* line 7, ../sass/components/_media-timeline.scss */
+.iframe-timeline {
+  min-width: 100%;
+  height: 500px;
+}
+@media (min-width: 34.375em) {
+  /* line 7, ../sass/components/_media-timeline.scss */
+  .iframe-timeline {
+    width: auto;
+    height: 600px;
+  }
+}
+@media (min-width: 64em) {
+  /* line 7, ../sass/components/_media-timeline.scss */
+  .iframe-timeline {
+    width: auto;
+    height: 700px;
+  }
+}
+/* line 21, ../sass/components/_media-timeline.scss */
+.iframe-timeline .vco-slider .slider-container-mask .slider-container {
+  top: 20px !important;
+}
+
 /* line 2, ../sass/components/_navigation.scss */
 .primary-nav,
 .secondary-nav {
